# shadow.js

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
crates/ast/: Cargo.toml  README.md
crates/ast/src/: lib.rs  nodes.rs
crates/bindings/: Cargo.toml  README.md
crates/bindings/src/: lib.rs
crates/bytecode/: Cargo.toml  README.md
crates/bytecode/src/: chunk.rs  compiler.rs  lib.rs  opcode.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: lib.rs
crates/gc/: Cargo.toml  README.md
crates/gc/src/: lib.rs  trace.rs
crates/jit/: Cargo.toml  README.md
crates/jit/src/: lib.rs
crates/jsruntime/: Cargo.toml  README.md
crates/jsruntime/src/: lib.rs
crates/lexer/: Cargo.toml  README.md
crates/lexer/src/: lexer.rs  lib.rs  token.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: lib.rs  parser.rs
crates/value/: Cargo.toml  README.md
crates/value/src/: lib.rs
crates/vm/: Cargo.toml  README.md
crates/vm/src/: environment.rs  error.rs  lib.rs  value.rs  vm.rs
examples/: complex_test.js
examples/eval_hello_world/: hello.js  if_test.js
